--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome Page</title>
+    <style>
+        body {
+            background-color: pink;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            animation: bgMove 5s infinite alternate;
+        }
+        .welcome {
+            font-size: 3rem;
+            font-weight: bold;
+            color: white;
+            position: relative;
+            animation: moveText 3s infinite alternate;
+        }
+        .heart {
+            color: red;
+            animation: pop 1s infinite alternate, moveHeart 3s infinite alternate;
+        }
+        @keyframes pop {
+            0% { transform: scale(1); }
+            100% { transform: scale(1.3); }
+        }
+        @keyframes moveText {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-20px); }
+        }
+        @keyframes moveHeart {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-10px); }
+        }
+        @keyframes bgMove {
+            0% { background-color: pink; }
+            100% { background-color: lightcoral; }
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="welcome">Welcome <span class="heart">❤️</span></div>
 </body>
 </html>
